# doi-pdf

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/doi_pdf/: __init__.py  _http.py  browser.py  cli.py  core.py  doi.py  metadata.py  resolvers.py
tests/: conftest.py  test_browser.py  test_cli.py  test_core.py  test_doi.py  test_http.py  test_metadata.py  test_openalex_content.py  test_resolvers.py
