[project]
name = "doi-pdf"
version = "0.0.1"
description = "Given a DOI, find an open access PDF and its CrossRef metadata."
readme = "README.md"
requires-python = ">=3.15"
dependencies = [
    "requests>=2.31",
    "playwright>=1.44",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.scripts]
doi-pdf = "doi_pdf.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.10",
    "ty>=0.0.55",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doi_pdf"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]

[tool.ty.environment]
python-version = "3.15"

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: test makes live network calls (deselect with -m 'not network')",
    "browser: test renders a page with a headless browser (slow; needs `playwright install`)",
]
